syntax = "proto3";
package evrynet;
import "google/protobuf/empty.proto";

message Asset {  
    string code = 1;  
    string issuer = 2;  
    uint32 decimal = 3;
}

message GetNonceRequest {    
    string evrynetAddress = 1;
}

message GetNonceResponse{    
    string nonce = 1;
}

message GetWhitelistAssetsResponse {  
    repeated Asset assets = 1;
}

message GetBalanceRequest {    
    string accountAddress = 1;    
    Asset asset = 2;
}
    
message GetBalanceResponse {    
    string balance = 1;
}

service EvrynetGRPC {    
    rpc GetNonce (GetNonceRequest) returns (stream GetNonceResponse);    
    rpc GetWhitelistAssets (google.protobuf.Empty) returns (stream GetWhitelistAssetsResponse);    
    rpc GetBalance(GetBalanceRequest) returns (stream GetBalanceResponse);
}